# chainsage

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: ai_response_agent.py  base_agent.py  chat_agent.py  collection_strategy_agent.py  course_recommendation_agent.py  intent_agent.py  llm_agent.py  models.py  training_advisor_agent.py
backend/app/api/: routes.py
backend/app/core/: auth.py  config.py
backend/app/core/db/: __init__.py  qdrant.py
backend/app/core/embedding/: aliyun_embedding_service.py  bge.py
backend/app/core/llm/: base.py  service.py
backend/app/core/utils/: __init__.py  deepseek_client.py  wc_llm_client.py
backend/app/core/vector_store/: __init__.py  qdrant.py
backend/app/models/: user.py
backend/scripts/: test_qdrant.py
backend/tests/: conftest.py  test_course_recommendation_agent.py
backend/tests/core/embedding/: test_bge.py
backend/tests/core/utils/: test_deepseek_client.py
backend/tests/core/vector_store/: test_qdrant.py
frontend/: .babelrc  Dockerfile  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  config.ts  index.tsx  styles.css
frontend/src/components/: Chat.tsx  CourseDetail.tsx  CourseList.tsx  CourseMap.tsx  CourseNavigation.tsx  Courses.tsx  FinancialPractice.tsx  Home.tsx  IndustryPractice.tsx  IndustrySelection.tsx  IntentAnalysis.tsx  Login.tsx  PracticeDetail.tsx  PracticePacks.tsx
frontend/src/components/home/: CTASection.tsx  CourseSearch.tsx  FeaturesSection.tsx  HeroSection.tsx  PopularPrograms.tsx  UserSidebar.tsx
frontend/src/components/intent/: AIResponseResult.tsx  CollectionStrategyResult.tsx  CourseRecommendations.tsx  DialogueInput.tsx  IntentAnalysisResult.tsx  ProgressLog.tsx  QuestionAnalysisResult.tsx  QuestionImprovementAdvice.tsx  types.ts
frontend/src/components/intent/hooks/: useIntentAnalysis.ts
frontend/src/components/layout/: MainLayout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: courses.ts
frontend/src/pages/: ChatPage.tsx  _app.tsx  chat.tsx  courses.tsx  index.tsx  login.tsx  practices.tsx
frontend/src/pages/api/: login.ts
frontend/src/pages/courses/: [courseId].tsx  ai-tools-basic.tsx  python.tsx
frontend/src/pages/courses/ai-tools-basic/quiz/: 2-4.tsx
frontend/src/pages/practices/: [industry].tsx
frontend/src/services/: config.ts  mockAuth.ts
frontend/src/services/api/: factory.ts  mockAuthService.ts  realAuthService.ts  types.ts
frontend/src/styles/: FinancialPractice.module.css  IndustryPractice.module.css  IndustrySelection.module.css  PracticeDetail.module.css  PracticePacks.module.css  globals.css
