[tool.poetry]
name = "chainsage-backend"
version = "0.1.0"
description = "Backend for ChainSage AI Training Platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
pydantic = "^2.4.2"
PyPDF2 = "^3.0.1"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
sse-starlette = "^1.8.0"
passlib = "^1.7.4"
bcrypt = "3.2.2"
aliyun-python-sdk-core = "^2.13.36"
aliyun-python-sdk-alinlp = "^1.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing" 